tests/invalid/next_zero_args/main.py
def main() -> None:
    x = next()
    print(x)
